fix whitespace bug

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -12,7 +12,13 @@
 \
  */
  @import "bootstrap";
-
+:root{
+     height: 100%;
+ }
+body{
+    height: 100%;
+    padding: 0px;
+}
  .text-black{
      color: black;
  }
